@@ -1,11 +1,11 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/pkgKitten.R
 \name{kitten}
 \alias{kitten}
 \title{Create a very simple package}
 \usage{
 kitten(name = "anRpackage", path = ".", author, maintainer, email,
-  license = "GPL (>= 2)")
+  license = "GPL (>= 2)", puppy = TRUE)
 }
 \arguments{
 \item{name}{The name of the package to be created, defaults to \dQuote{anPackage}}
@@ -14,15 +14,18 @@ kitten(name = "anRpackage", path = ".", author, maintainer, email,
 created, defaults to the current directory.}
 
 \item{author}{The name of the author, defaults to the result of
-\code{\link[whoami]{fullname}}.}
+\code{\link[whoami]{fullname}} (or \dQuote{Your Name} as fallback).}
 
 \item{maintainer}{The name of the maintainer, also defaults to
 \code{\link[whoami]{fullname}} or \code{author} if the latter is given.}
 
 \item{email}{The maintainer email address, defaults to
-\code{\link[whoami]{email_address}}.}
+\code{\link[whoami]{email_address}} (or \dQuote{your@email.com} as fallback).}
 
-\item{license}{The license of the new package, default to \dQuote{GPL-2}.}
+\item{license}{The license of the new package, defaults to \dQuote{GPL-2}.}
+
+\item{puppy}{Toggle whether \code{tinytest::puppy} add unit testing, default
+to true (but conditional on \code{tinytest} being installed).}
 }
 \value{
 Nothing is returned as the function is invoked for its
@@ -46,4 +49,3 @@ trauma. Just think about the kittens.
 \author{
 Dirk Eddelbuettel
 }
-
